--- a/app/views/minutes/new.html.erb
+++ b/app/views/minutes/new.html.erb
@@ -1,4 +1,4 @@
 <div class="col-md-10 offset-md-1 mt-3">
-  <h2 class="text-center">議事録投稿</h2>
+  <h2 class="text-center"><%= t ".title" %></h2>
   <%= render 'form', minute: @minute %>
 </div>
